<resources>
    <string name="app_name">tabungangan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="loading">Loading</string>
    <string name="rePassword">Re enter password</string>
    <string name="already">Already Have Account?</string>
    <string name="ok">Oke</string>
    <string name="batal">Batal</string>
    <string name="pilih_bulan_tahun">Pilih Bulan dan Tahun</string>
    <string name="cari">Cari</string>
    <string name="job_success">Job Success</string>
    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="logout">Logout</string>
    <string name="submitwishlist">Masukan Wishmu</string>
    <string name="wishlist">Masukkan Keinginan</string>

    <array name="kurir">
        <item>Pilih Kurir</item>
        <item>JNE REGULER</item>
        <item>JNE YES</item>
    </array>

</resources>
